--- a/user/templates/user/logout.html
+++ b/user/templates/user/logout.html
@@ -5,8 +5,7 @@
 
 <div class="listing container">
 
-
-You have logged out
+    <p>You have logged out, login again <a href="{% url 'login' %}">here</a></p>
 
 </div>
 {% endblock %}
