--- a/blog/templates/blog/users_posts.html
+++ b/blog/templates/blog/users_posts.html
@@ -81,12 +81,12 @@
                     <li><a href="?page=4" class="btn btn-outline-secondary">&raquo;</a></li>
                 {% endif %}
             </ul>
-    % endif %}
+    {% endif %}
         </div>
 </div>
 
 
 
 
-{% endblock %}
+{% endblock content %}
 
