--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,65 +1,110 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
-    <link rel="shortcut icon" href="#">
-</head>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="{% static 'blog/blog.css' %}" />
+    <link rel="shortcut icon" href="#" />
+  </head>
 
-
-
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="nav_bar container-fluid">
-    <a class="navbar-brand" href="{% url 'post_list' %}">Zumber</a>
-      <ul class="navbar-nav me-auto my-2 my-lg-0 ">
-        <li class="nav-item">
-          <!--<a class="nav-link active" aria-current="page" href="#">Home</a>-->
-        </li>
-      </ul>
-      <!--<form class="d-flex">
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="nav_bar container-fluid">
+        <a class="navbar-brand" href="{% url 'post_list' %}"><h2>Zumber</h2></a>
+        <ul class="navbar-nav me-auto my-2 my-lg-0">
+          <li class="nav-item">
+            <!--<a class="nav-link active" aria-current="page" href="#">Home</a>-->
+          </li>
+        </ul>
+        <!--<form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>-->
-      {% if user.is_authenticated %}
-      <div class="dropdown">
-          <button class="like" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-              <img class="user-nav-image" src="{{ user.userprofile.user_image.url }}">
+        {% if user.is_authenticated %}
+        <div class="dropdown">
+          <button
+            class="like"
+            id="dropdownMenuButton1"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <img
+              class="user-nav-image"
+              src="{{ user.userprofile.user_image.url }}"
+            />
           </button>
 
-          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="{% url 'post_new' %}">Create a new blog</a></li>
-            <li><a class="dropdown-item" href="{% url 'profile' pk=user.pk %}">My profile</a></li>
-            <li><a class="dropdown-item" href="{% url 'post_draft_list' pk=user.id %}">My draft list</a></li>
-            <li><a class="dropdown-item" href="{% url 'users_posts' users_id=user.id %}">My blogs</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout({{user}})</a></li>
+          <ul
+            class="dropdown-menu dropdown-menu-dark"
+            aria-labelledby="dropdownMenuButton1"
+          >
+            <li>
+              <a class="dropdown-item" href="{% url 'post_new' %}"
+                >Create a new blog</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="{% url 'profile' pk=user.pk %}"
+                >My profile</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="{% url 'post_draft_list' pk=user.id %}"
+                >My draft list</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="{% url 'users_posts' users_id=user.id %}"
+                >My blogs</a
+              >
+            </li>
+            <li><hr class="dropdown-divider" /></li>
+            <li>
+              <a class="dropdown-item" href="{% url 'logout' %}"
+                >Logout({{user}})</a
+              >
+            </li>
           </ul>
-
         </div>
-          {% else %}
-          <a href="{% url 'login' %}" class="sign-in top-menu"><button class="btn btn ">Log-in</button></a>
-                <a href="{% url 'signup' %}" class="sign-up top-menu"><button class="btn btn-danger ">Sign-up</button></a>
-          {% endif %}
-    </div>
-</nav>
+        {% else %}
+        <a href="{% url 'login' %}" class="sign-in top-menu"
+          ><button class="btn btn">Log-in</button></a
+        >
+        <a href="{% url 'signup' %}" class="sign-up top-menu"
+          ><button class="btn btn-danger">Sign-up</button></a
+        >
+        {% endif %}
+      </div>
+    </nav>
 
+    {% block content %} {% endblock %} {% block scripts %} {% endblock scripts%}
 
-
-
-
-
-{% block content %} {% endblock %}
-
-{% block scripts %} {% endblock scripts %}
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script></body>
-
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
