--- a/blog/templates/blog/post_new.html
+++ b/blog/templates/blog/post_new.html
@@ -1,18 +1,14 @@
-{% extends 'blog/base.html' %}
-
-
-{% block content %}
-{% load crispy_forms_tags %}
+{% extends 'blog/base.html' %} {% block content %} {% load crispy_forms_tags %}
 
 <div class="listing container">
-    <h1>Create a new post</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <br>
-        <button class="btn btn-primary">Create</button>
-    </form>
+  <h1 class="new-post-h1">Create a new post</h1>
+  <form action="" method="post">
+    {% csrf_token %} {{ form|crispy }}
+
+    <div class="create-btn">
+      <button class="btn btn-primary">Create</button>
+    </div>
+  </form>
 </div>
 
 {% endblock %}
-
