--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,44 +1,34 @@
-{% extends 'blog/base.html' %}
-
-
-{% block content %}
-{% load crispy_forms_tags %}
+{% extends 'blog/base.html' %} {% block content %} {% load crispy_forms_tags %}
 
 <div class="listing container mt-3">
-    <div class="d-flex border p-8">
-        <img class="flex-shrink-0 mr-3 mt-3 rounded-circle profile-image" src="{{ user.userprofile.user_image.url }}">
-        <div>
-            <h4> {{ users.username }} </h4>
-            <p class="text-secondary">{{ users.email }}</p>
-        </div>
+  <div class="d-flex border p-8">
+    <img
+      class="flex-shrink-0 mr-3 mt-3 rounded-circle profile-image"
+      src="{{ user.userprofile.user_image.url }}"
+    />
+    <div class="profile-name">
+      <h4>{{ users.username }}</h4>
+      <p class="text-secondary">{{ users.email }}</p>
     </div>
+  </div>
 
-    <div class="content-section">
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-                <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Profile info</legend>
-                    · <a href="{% url 'password_change' %}">Change password</a>
-                    <hr>
-                    {{ e_form|crispy }}
-                    {{ p_form|crispy }}
-                </fieldset>
-            <br>
-            <input type="submit" class="btn btn-primary" value="Update">
-        </form>
-    </div>
+  <div class="content-section">
+    <form method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      <fieldset class="profile-form">
+        <legend class="profile-info border-bottom mb-4">Profile info</legend>
+        <div class="password-info">
+          <a href="{% url 'password_change' %}"> Change password</a>
+        </div>
+
+        <hr />
+        {{ e_form|crispy }} {{ p_form|crispy }}
+      </fieldset>
+      <div class="button-profile">
+        <input type="submit" class="btn btn-primary" value="Update" />
+      </div>
+    </form>
+  </div>
 </div>
 
-
-
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
